--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,14 +10,29 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:theme="@style/AppTheme.NoActionBar">
-        <activity android:name="com.example.gobear.ui.MainActivity">
+        android:theme="@style/AppTheme">
+        <activity android:name="com.example.gobear.ui.splash.SplashActivity"
+            android:launchMode="singleTop"
+            android:screenOrientation="behind"
+            android:theme="@style/SplashActivity"
+            android:windowSoftInputMode="stateHidden|adjustResize|stateAlwaysHidden">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ui.walkthough.WalkThroughActivity"
+            android:launchMode="singleTop"
+            android:screenOrientation="behind" />
+        <activity android:name=".ui.login.LoginActivity"
+            android:launchMode="singleTop"
+            android:screenOrientation="behind"
+            android:windowSoftInputMode="stateHidden|adjustResize" />
+
+        <activity android:name=".ui.main.MainActivity"
+            android:launchMode="singleTop"
+            android:screenOrientation="behind" />
     </application>
 
 </manifest>
