--- a/config.gradle
+++ b/config.gradle
@@ -15,7 +15,8 @@ ext.versions = [
         kotlin             : '1.3.0',
         supportLibrary      : '27.1.0',
         constraintLayout    : '1.1.0',
-        glide               : '4.9.0'
+        glide               : '4.9.0',
+        stetho             : '1.5.0'
 ]
 
 ext.libraries = [
@@ -47,6 +48,8 @@ ext.libraries = [
         constraintLayout        : "com.android.support.constraint:constraint-layout:$versions.constraintLayout",
         cardView                : "com.android.support:cardview-v7:$versions.supportLibrary",
         glide                   : "com.github.bumptech.glide:glide:$versions.glide",
+        stetho                  : "com.facebook.stetho:stetho:$versions.stetho",
+        stetho_okhttp3          : "com.facebook.stetho:stetho-okhttp3:$versions.stetho",
 ]
 
 ext.compiler = [
